fixed spacing
Added a flex box in my CSS to get weekly forecast to display horizontally instead of vertically.

--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,8 @@ footer {
   margin-top: 20px;
   text-align: center;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .weekly-forecast-date {
